# filesigner

./: CMakeLists.txt  README.md  input.txt  main.cpp  signature.cpp  signature.h
